src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
* {
  margin: 0;
  padding: 0;
}
html {
  scroll-behavior: smooth;
}
body {
  background-color: black;
  color: white;
  font-family: Roboto Slab, Arial;
}
a {
  color: white;
  transition: color 0.15s;
  &:hover {
    color: #ff1f8f;
  }
}
h1 {
  font-size: 3rem;
  text-align: center;
}
.landingPage {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 5rem;
  .svgContainer {
    width: 75%;
    max-width: 1000px;
    aspect-ratio: 4/2.7;
    display: flex;
    justify-content: center;
  }
  svg {
    transform: scale(1.1);
    #schoolSvg {
      stroke: white;
      stroke-dasharray: 1000;
      pointer-events: none;
      stroke-dashoffset: 1000;
      transition: stroke-dashoffset 1s ease-in-out;
    }
    &.visible #schoolSvg {
      stroke-dashoffset: 400;
      transition: stroke-dashoffset 2.5s ease-in-out;
    }
  }
}
.timeline {
  padding-top: 10%;
  min-height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.mainSection {
  display: grid;
  padding: 5rem 2rem;
  padding-bottom: 4rem;
  margin: 0 auto;
  max-width: 1200px;
}
.sectionCoverPhoto {
  grid-row: 1;
  margin-top: 40%;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}
.sectionText {
  display: flex;
  flex-direction: column;
  align-items: center;
  grid-row: 1;
  margin-top: 10%;
}
.sectionHeader {
  text-align: center;
  font-size: 3rem;
  margin-bottom: 1.5rem;
}
.sectionContent {
  p {
    text-align: justify;
    margin-bottom: 0.65rem;
  }
}
nav {
  max-width: 100vw;
  overflow-x: auto;
  z-index: 10;
  display: flex;
  position: relative;
  position: sticky;
  top: 0;
  background-color: black;
  padding: 0.6rem;
  padding-left: 1.4rem;
  min-height: 2rem;
  &.active {
    height: 100vh;
    .links {
      flex-direction: column;
    }
    .hamburger div {
      &:nth-child(1) {
        transform: rotate(45deg) translate(0.3rem, 0.3rem);
      }
      &:nth-child(2) {
        opacity: 0;
      }
      &:nth-child(3) {
        transform: rotate(-45deg) translate(0.3rem, -0.3rem);
      }
    }
  }
}
.hamburger {
  position: absolute;
  top: 1rem;
  right: 1rem;
  div {
    width: 2rem;
    height: 0.2rem;
    background-color: white;
    transition: all 0.3s ease;
    transform-origin: center;
    margin-bottom: 0.22rem;
  }
}
.links {
  display: flex;
  margin: auto;
  &.hidden {
    display: none;
  }
  a {
    font-size: 2.7rem;
    text-decoration: none;
    font-weight: bold;
    margin-bottom: 0.5rem;
    &:hover {
      color: white;
      text-decoration: underline;
      text-shadow: 0.022em 0.022em #ff1f8f, -0.007em -0.007em 7px #ff1f8f, 0 0 0.7em #ff1f8f;
    }
  }
}
.timelineEntries {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin: 5rem 3rem;
  margin-bottom: 4rem;
  text-align: center;
  max-width: 1200px;

  .row {
    display: flex;
    & > .date {
      overflow: hidden;
      position: relative;
      width: 58%;
      display: flex;
      align-items: center;
      justify-content: center;
      user-select: none;
      span {
        z-index: 2;
        color: gray;
        background-color: black;
        border: 1px solid gray;
        border-radius: 0.4rem;
        padding: 0.5rem;
      }
      &::before {
        content: '';
        position: absolute;
        width: 50%;
        height: 0.1rem;
        background-color: gray;
      }
    }
    & > :not(.date) {
      width: 42%;
      border: 1px solid white;
      border-radius: 0.4rem;
      padding: 0.8rem;
    }
    &.left {
      flex-direction: row;
      .date::before {
        margin-right: 50%;
      }
    }
    &.right {
      flex-direction: row-reverse;
      .date::before {
        margin-left: 50%;
      }
    }
  }
}
@media (max-width: 900px) {
  h1 {
    font-size: 2rem;
  }
  .timelineEntries {
    width: 72%;
    .row {
      flex-direction: column-reverse !important;
      align-items: center;
      margin-bottom: 1rem;
      & > :not(.date) {
        width: 100%;
        text-align: justify;
      }
      .date {
        width: 100%;
        span {
          border: none;
        }
        &::before {
          display: none;
        }
      }
      &.left .date {
        justify-content: flex-start;
      }
      &.right .date {
        justify-content: flex-end;
      }
    }
  }
  .mainSection {
    grid-template-rows: auto auto;
    .sectionCoverPhoto {
      margin-top: 10%;
      margin-bottom: 3rem;
      grid-row: 1;
      width: 50%;
    }
    .sectionText {
      grid-row: 2;
      margin: 0 2rem;
    }
  }
  .sectionHeader {
    font-size: 2.2rem;
    margin-bottom: 1rem;
  }
  .links {
    align-items: center;
    a {
      font-size: 1.8rem;
    }
  }
}
@media (min-width: 900px) {
  .hamburger {
    display: none;
  }
  .links {
    flex-direction: row !important;
    margin: 0 !important;
    display: block !important;
    a {
      font-size: 1.3rem;
      margin-right: 0.75rem;
    }
  }
  nav.active {
    height: auto;
  }
  .mainSection {
    gap: 2rem;
    &:nth-child(odd) {
      grid-template-columns: 2fr 3fr;
      .sectionCoverPhoto {
        grid-column: 1;
      }
      .sectionText {
        grid-column: 2;
      }
    }
    &:nth-child(even) {
      grid-template-columns: 3fr 2fr;
      .sectionCoverPhoto {
        grid-column: 2;
      }
      .sectionText {
        grid-column: 1;
      }
    }
  }
}

